--- a/src/components/Extra styles.css
+++ b/src/components/Extra styles.css
@@ -158,7 +158,10 @@ input:checked + .slider:before {
     padding: 0.5rem 1rem;
     border-radius: 5px;
 }
-#loginB { display: block }
+#loginB { 
+    display: block;
+    width: 75px;
+}
 
 #copyB:hover, #loginB:hover {
     background: #3b82f6;
