--- a/src/components/Stylings/Extra styles.css
+++ b/src/components/Stylings/Extra styles.css
@@ -166,6 +166,14 @@ input:checked + .slider:before {
 
 /* Loader styling */
 
+.dots-loader {
+  width: 60px;
+  aspect-ratio: 4;
+  background: radial-gradient(circle closest-side,#bbb 90%,#bbbb) 0/calc(100%/3) 100% space;
+  clip-path: inset(0 100% 0 0);
+  animation: l1 1s steps(4) infinite;
+}
+
 .loader {
   width: 50px;
   aspect-ratio: 1;
@@ -326,6 +334,12 @@ hr {
 }
 
 /* Animations */
+
+@keyframes dots-loader { 
+    to { 
+        clip-path: inset(0 -34% 0 0)
+    } 
+}
 
 @keyframes load {
     to {
