--- a/src/components/Stylings/Extra styles.css
+++ b/src/components/Stylings/Extra styles.css
@@ -171,7 +171,7 @@ input:checked + .slider:before {
   aspect-ratio: 4;
   background: radial-gradient(circle closest-side,#bbb 90%,#bbbb) 0/calc(100%/3) 100% space;
   clip-path: inset(0 100% 0 0);
-  animation: l1 1s steps(4) infinite;
+  animation: dots-loader 1s steps(4) infinite;
 }
 
 .loader {
