--- a/src/components/Stylings/Extra styles.css
+++ b/src/components/Stylings/Extra styles.css
@@ -171,7 +171,7 @@ input:checked + .slider:before {
 .dots-loader {
   width: 80px;
   aspect-ratio: 4;
-  background: radial-gradient(circle closest-side,#bbb 90%,#0000) 0/calc(100%/3) 100% space;
+  background: radial-gradient(circle closest-side,#000 90%,#0000) 0/calc(100%/3) 100% space;
   clip-path: inset(0 100% 0 0);
   animation: dots-loader 1s steps(4) infinite;
 }
