--- a/src/components/Stylings/Register.css
+++ b/src/components/Stylings/Register.css
@@ -1,15 +1,21 @@
 @keyframes slideIn {
-    from {
-      transform: translateX(-100%);
-      opacity: 0;
-    }
-    to {
-      transform: translateX(0);
-      opacity: 1;
-    }
+  from {
+    transform: translateX(-100%);
+    opacity: 0;
   }
-  
-  .slide-in {
-    animation: slideIn 1s ease-out;
+  to {
+    transform: translateX(0);
+    opacity: 1;
   }
+}
+
+.slide-in {
+  animation: slideIn 1s ease-out;
+}
+
+#Email-note {
+  font-size: 12px;
+  color: #ed7117;
+  margin-top: 4px;
+}
   
