Update and improve tings

--- a/src/components/Stylings/Extra styles.css
+++ b/src/components/Stylings/Extra styles.css
@@ -415,6 +415,7 @@ hr {
     }
 
     #copyB { display: none }
+    .Link { padding: 3px }
     .Link:hover { background-color: #3e97ec }
 
     /* Rewards page */
