--- a/src/components/Stylings/Extra styles.css
+++ b/src/components/Stylings/Extra styles.css
@@ -5,7 +5,7 @@ aside {
     top: 0;
     bottom: 0;
     height: 100vh;
-} 
+}
 
 .Navigation {
     margin-top: 4cm;
@@ -30,13 +30,13 @@ aside {
 }
 
 .Contact a {
-   color: lightgrey;
-   font-size: 18px;
-   text-decoration: none;
-   transition: 0.3s;  
+    color: lightgrey;
+    font-size: 18px;
+    text-decoration: none;
+    transition: 0.3s;
 }
 
-    /* Top bar styling */
+/* Top bar styling */
 
 .Top-bar {
     margin: 0 auto;
@@ -47,12 +47,13 @@ aside {
     width: 35px;
     padding: 5px;
 }
+
 .ham-menu button {
     margin: 0 auto;
 }
 
 .Logo {
-    max-width: 185px;	
+    max-width: 185px;
 }
 
 /* Theme button styling */
@@ -63,14 +64,14 @@ aside {
     width: 60px;
     height: 34px;
 }
-  
+
 /* Hide default HTML checkbox */
 .switch input {
     opacity: 0;
     width: 0;
     height: 0;
 }
-  
+
 /* The slider */
 .slider {
     position: absolute;
@@ -83,7 +84,7 @@ aside {
     transition: 0.4s;
     border-radius: 34px;
 }
-  
+
 .slider:before {
     position: absolute;
     content: "";
@@ -95,24 +96,24 @@ aside {
     transition: 0.4s;
     border-radius: 50%;
 }
-  
+
 /* Checkbox checked */
-input:checked + .slider {
+input:checked+.slider {
     background-color: #101424;
- }
-  
+}
+
 /* Checkbox checked:before */
-input:checked + .slider:before {
+input:checked+.slider:before {
     transform: translateX(26px);
 }
-  
+
 /* Rounded sliders */
 
 .slider.round {
     border-radius: 34px;
     border-color: #ccc;
 }
-  
+
 .slider.round:before {
     border-radius: 50%;
     border-color: #ccc;
@@ -121,7 +122,7 @@ input:checked + .slider:before {
 .bg-black {
     background-color: #000;
 }
-  
+
 .bg-dark {
     background-color: #12182e;
 }
@@ -151,16 +152,24 @@ input:checked + .slider:before {
     color: #900604;
 }
 
-#No-login { color: #db8a0f }
-#copyB, #loginB {
+#No-login {
+    color: #db8a0f
+}
+
+#copyB,
+#loginB {
     background: #d1d5db;
     color: #1a202c;
     padding: 0.5rem 1rem;
     border-radius: 5px;
 }
-#loginB { width: 75px }
 
-#copyB:hover, #loginB:hover {
+#loginB {
+    width: 75px
+}
+
+#copyB:hover,
+#loginB:hover {
     background: #3b82f6;
 }
 
@@ -169,27 +178,27 @@ input:checked + .slider:before {
 /* HTML: <div class="loader"></div> */
 
 .dots-loader {
-  width: 80px;
-  aspect-ratio: 4;
-  background: radial-gradient(circle closest-side,#bbb 90%,#0000) 0/calc(100%/3) 100% space;
-  clip-path: inset(0 100% 0 0);
-  animation: dots-loader 1s steps(4) infinite;
+    width: 80px;
+    aspect-ratio: 4;
+    background: radial-gradient(circle closest-side, #bbb 90%, #0000) 0/calc(100%/3) 100% space;
+    clip-path: inset(0 100% 0 0);
+    animation: dots-loader 1s steps(4) infinite;
 }
 
 .loader {
-  width: 50px;
-  aspect-ratio: 1;
-  border-radius: 50%;
-  border: 8px solid;
-  border-color: #000 #0000;
-  animation: load 1s infinite;
+    width: 50px;
+    aspect-ratio: 1;
+    border-radius: 50%;
+    border: 8px solid;
+    border-color: #000 #0000;
+    animation: load 1s infinite;
 }
 
 .dotted-loader {
     width: 50px;
     aspect-ratio: 2;
-    --_g: no-repeat radial-gradient(circle closest-side,#000 90%,#0000);
-    background: var(--_g) 0%   50%, var(--_g) 50%  50%, var(--_g) 100% 50%;
+    --_g: no-repeat radial-gradient(circle closest-side, #000 90%, #0000);
+    background: var(--_g) 0% 50%, var(--_g) 50% 50%, var(--_g) 100% 50%;
     background-size: calc(100%/3) 50%;
     animation: dotted-loader 1s infinite linear;
 }
@@ -229,6 +238,7 @@ select:hover {
 .Tier-info a {
     color: #3e97ec;
 }
+
 .Tier-info a:hover {
     text-decoration: wavy underline;
     color: #a1045a;
@@ -247,6 +257,7 @@ ul {
     padding: 4px;
     margin-bottom: 11px;
 }
+
 .Tier-info span:hover {
     cursor: pointer;
     border: 2px dot-dash #ae7f65
@@ -286,9 +297,10 @@ ul {
     font-size: 1rem;
     font-family: Sans-serif;
     color: #48494b;
-    background: #808589; 
+    background: #808589;
 }
-#dis-button:hover{
+
+#dis-button:hover {
     background: #84effd;
     border: 2px wave #48494b;
 }
@@ -324,10 +336,10 @@ hr {
 
 /* Animations */
 
-@keyframes dots-loader { 
-    to { 
+@keyframes dots-loader {
+    to {
         clip-path: inset(0 -34% 0 0)
-    } 
+    }
 }
 
 @keyframes load {
@@ -337,46 +349,89 @@ hr {
 }
 
 @keyframes dotted-loader {
-    20%{background-position:0%   0%, 50%  50%,100%  50%}
-    40%{background-position:0% 100%, 50%   0%,100%  50%}
-    60%{background-position:0%  50%, 50% 100%,100%   0%}
-    80%{background-position:0%  50%, 50%  50%,100% 100%}
+    20% {
+        background-position: 0% 0%, 50% 50%, 100% 50%
+    }
+
+    40% {
+        background-position: 0% 100%, 50% 0%, 100% 50%
+    }
+
+    60% {
+        background-position: 0% 50%, 50% 100%, 100% 0%
+    }
+
+    80% {
+        background-position: 0% 50%, 50% 50%, 100% 100%
+    }
 }
 
 @keyframes rotateX {
-    100%{transform: rotateX(360deg)}
+    100% {
+        transform: rotateX(360deg)
+    }
 }
 
 @keyframes slide {
     from {
         margin-left: 80%;
-    } to {
+    }
+
+    to {
         margin-left: 0%;
     }
 }
 
 @keyframes tilt-shaking {
-    0% { transform: rotate(0deg); }
-    25% { transform: rotate(5deg); }
-    50% { transform: rotate(0eg); }
-    75% { transform: rotate(-5deg); }
-    100% { transform: rotate(0deg); }
+    0% {
+        transform: rotate(0deg);
+    }
+
+    25% {
+        transform: rotate(5deg);
+    }
+
+    50% {
+        transform: rotate(0eg);
+    }
+
+    75% {
+        transform: rotate(-5deg);
+    }
+
+    100% {
+        transform: rotate(0deg);
+    }
 }
 
 @keyframes tilt-n-move-shaking {
-    0% { transform: translate(0, 0) rotate(0deg); }
-    25% { transform: translate(5px, 5px) rotate(5deg); }
-    50% { transform: translate(0, 0) rotate(0eg); }
-    75% { transform: translate(-5px, 5px) rotate(-5deg); }
-    100% { transform: translate(0, 0) rotate(0deg); }
+    0% {
+        transform: translate(0, 0) rotate(0deg);
+    }
+
+    25% {
+        transform: translate(5px, 5px) rotate(5deg);
+    }
+
+    50% {
+        transform: translate(0, 0) rotate(0eg);
+    }
+
+    75% {
+        transform: translate(-5px, 5px) rotate(-5deg);
+    }
+
+    100% {
+        transform: translate(0, 0) rotate(0deg);
+    }
 }
 
 /* Tablet portrait designs */
 
 @media only screen and (max-width: 788px) {
-    
+
     /* Home page */
-     
+
     .Top-bar {
         z-index: 2;
         position: sticky;
@@ -387,35 +442,45 @@ hr {
 
 /* Mobile view Portrait view */
 
-@media only screen and (max-width: 435px) {   
-     
+@media only screen and (max-width: 435px) {
+
     /* Nav bar */
 
-    aside { 
+    aside {
         width: 12.4rem;
         height: 100%;
     }
 
-    .Contact { margin-top: 2cm }
+    .Contact {
+        margin-top: 2cm
+    }
 
-     /* Home page */
+    /* Home page */
 
-    .Link-gen-con, .Stats {
+    .Link-gen-con,
+    .Stats {
         max-width: 380px;
         min-width: 300px;
     }
+
     .Tier {
         margin: 0 auto;
         width: 225px;
         height: 250px;
     }
+
     .Tier button {
         margin: 0 auto;
         width: 125px;
     }
 
-    #copyB { display: none }
-    .Link:hover { background-color: #3e97ec }
+    #copyB {
+        display: none
+    }
+
+    .Link:hover {
+        background-color: #3e97ec
+    }
 
     /* Rewards page */
 
